tests/error/empty_member_ptr.gw
// [contains] NullFuncPtrException
class C
{
	typedef void (test)();
	test t;
}
C c;
c.t();
